--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.17",
     "eslint": "8.5.0",
-    "eslint-config-next": "12.0.7"
+    "eslint-config-next": "12.0.7",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1"
   }
 }
